# Anythings-OK

./: .gitignore  README.md  main.py  pyproject.toml
backend/: chunker.py  extract.py
cli/: load.py  main.py
graphdb/: community.py  graph_extract.py  ingest.py  model.py  retriever.py
web/: api.py
web/frontend/app/: globals.css  layout.tsx  page.tsx
web/frontend/components/: ChatArea.tsx  Sidebar.tsx  ThemeToggle.tsx
web/frontend/lib/: api.ts
